2006-03-06 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
	* init.d/keymap.sh: Fixed include map loading to understand 
	  entries without .inc suffix. Fixed keymap loading to run only 
	  when $KEYMAP is actually provided; would sit and meditate 
	  otherwise (at least kbd's loadkeys would).

2006-03-05 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
	* init.d/keymap.sh, keymap.conf: removed ENABLE_EURO, replaced 
	  with INCLUDEMAPS which is not specific to console-tools and 
	  allows any include keymaps to be loaded.

2006-03-03 Juuso Alasuutari <juuso.alasuutari@tamperelainen.org>
	* init.d/keymap.sh: font & unicode are set on all consoles 
	  listed in /etc/inittab if $TTY_NUMS has "*".
	* init.d/keymap.conf: added comments; info about TTY_NUMS="*" 
	  and notice that TTY_NUMS needs to be set for any font/unicode 
	  changes to take effect

2006-02-27 David Brown <dmlb2000@gmail.com>
        * init.d/mountall.sh: fixed recursive_rm to not fail if nothing is there
        * DETAILS: updated patch level

2006-02-26 Jeremy Blosser <jblosser-smgl@firinn.org>
	* DETAILS: increment PATCHLEVEL
	* init.d/mountall.sh: s/rek_remove/recursive_rm/

2006-02-25 Jeremy Blosser <jblosser-smgl@firinn.org>
	* init.d/mountall.conf: fix variable name to match the one used in
	  mountall.sh

2006-02-25 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* init.d/mountall.sh: fixes for bug #10509-reopened
	* init.d/mountall.conf: config file

2006-02-15 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* init.d/mountall.sh: fixes for bug #10509, minor fix
	* WIP: holding this fix back for 1 week from today so that
	  some init scripts and spells can be fixed
	* WIP: and removed, no longer necesary
	* init.d/keymap.conf: One variabl was left set which broke stuff
	* init.d/keymap.sh: Not catching one of the vars
	* DETAILS: updated PATCHLEVEL

2006-02-14 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* WIP: removed
	* init.d/keymap.conf: added UNICODE_START